src/index.css
/* TAG */

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  font-size: 100%;
}

header {
  position: relative;
}

nav img {
  filter: drop-shadow(0 0 1px black);  
  height: 40px;
}

/* CLASS */

.badge-width {
  width: 30px;
}

.button-group {
  display: flex;
  justify-content: space-between;
}

.card {
  margin-top: 15px;
  min-width: 20%;
  padding: 0.1em;
}

.card:hover {
  box-shadow: 2px 2px 5px black;  
}

.card-delete-btn {
  position: absolute;
  top: .75rem;
  right: 10px;
  color: white;
  text-shadow: 0px 0px 2px black;
  cursor: pointer;
}

.card-deck {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.card-header {
  padding: .5rem .5rem;
  margin-bottom: 0;
  background-color: #ffc107;
  border-bottom: 1px solid rgba(0,0,0,.125);
}

.card-img {
  background-size: cover;
  max-height: 200px;
}

.card-img-top {
  height: 15vh;
}

.carousel-caption a {
  color: white;
  text-shadow: 0 0 5px black;  
}

.carousel-caption a:hover {
  text-decoration: none;
  text-shadow: 0 0 10px black;  
}

.homepage {
  position: relative;
}

.carousel-item img {
  height: 90vh;
}

.form-inline .input-group {
  width: 100%;
}

.hidden {
  display: none;
}

.input-group-addon {
  background-color: #ffc107;
  color: black;
}

.loading {
  position: absolute;
  top: 45vh;
  left: 45%;
  z-index: 1;
}

.login-form {
  background-color: snow;
  border: thin solid grey;
  border-radius: 4px;
  box-shadow: 2px 2px 5px grey;
  left: 50%;
  padding: 2em;
  position: absolute;
  top: 15vh;
  transform: translate(-50%);
  width: 50vw;
  z-index: 200;
}

.login-form h1 {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 1em;
  text-align: center;
}

.login-form h2 {
  font-size: 1.2em;
  margin: 1em 0;
  text-align: center;
}

.media-body p {
  font-size: 1.25em;
  margin-bottom: 0.5em;
}

.navbar {
  border-bottom: 3px solid goldenrod;
  font-size: 1.1em;
}

.navbar-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.place-card {
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  border: thin solid grey;
  border-bottom: 3px solid grey;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.place-card_index {
  background-color: white;
  border-right: thin solid, grey;
  height: 100%;
  padding-left: 1em;
  padding-right: 1em;
  margin: 0;
  max-width: 15%;
  text-align: center;
}

.place-card_text {
  background-color: snow;
  text-align: left;
}

.place-card_button {
  background-color: lightgrey;
  border-left: thin solid grey;
  max-width: 15%;
  padding-right: 0.5em;
  text-align: center;
}

.place-card_button:hover {
  cursor: pointer;
}

.row {
  width: 90%;
  margin-left: 5%;
}

.search-field {
  /* min-width: 50vw; */
}

.text-overlay {
  border-radius: 0;
  color: white;
  height: 40vh;
  left: 10%;
  position: absolute;
  text-align: center;
  top: 10%;
  width: 80vw;
  z-index: 100;
}

.text-overlay .display-1 {
  color: snow;
  font-weight: bold;  
  text-shadow: 0 0 5px black;
  /* -webkit-text-fill-color: snow;
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: black; */
}

.text-overlay .lead {
  color: snow;
  font-size: 1.7em;
  font-weight: bold; 
  text-shadow: 0 0 5px black;
}

.title-line {
  align-items: baseline;
  border-bottom: thin groove gray;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-bottom: 1em;
  width: 100%;
}

.title-line .h1 {
  margin-left: 0;
}

.title-line__header {
  align-items: center;
  display: flex;
  flex-direction: row;
}

.trip-manager {
  position: relative;
}

.waypoint {
  padding: .5rem;
  border-bottom: solid 2px lightgrey; 
  width: 100%;
}

.sidebar {
  border-left: solid 3px lightgray;
  background-color: rgba(255, 255, 255, 0.9);
  overflow: scroll;
  padding: 1rem 2rem;
  position: absolute;
  right: 0;
  top: 0;
  height: 80vh;
  z-index: 10;
}

.sidebar-trigger {
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 0 5px 5px 0;
  color: white;
  cursor: pointer;
  display: flex;
  height: 50px;
  justify-content: center;
  margin-top: -25px;
  position: absolute;
  left: 0;  
  top: 50%;
  width: 20px;
  z-index: 11;
}

.sidebar-trigger:hover {
  background-color: rgba(0, 0, 0, 0.6);
  color: lightgray;
}

.sidebar__expand {
  animation: sidebar-expand .2s linear 1 forwards;
}

.sidebar__hide {
  animation: sidebar-hide .2s linear 1 forwards;
}

@keyframes sidebar-expand {
  0% {
    background-color: snow;
    padding: 0;
    width: 3%;
  }
  100% {
    background-color: rgba(255, 255, 255, 0.9);
    padding: 1rem 2rem;
    width: 100%;
  }
}

@keyframes sidebar-hide {
  0% {
    background-color: rgba(255, 255, 255, 0.9);
    padding: 1rem 2rem;
    width: 100%;
  }
  100% {
    background-color: snow;
    padding: 0;
    width: 3%;
  }
}

